Fix formatting and structure of index.html

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         
         <div class="contenedor"> 
             <h1> Formulario de contacto</h1>
-             <form action="#">
+             <form id="contacto" action="#">
                 <label for="nombre">Nombre:</label>
                 <input type="text" name="Nombre_usuario" id="nombre" minlength="3" maxlength= "30" required> 
                 <label for="Correo"> Correo: </label>
@@ -112,5 +112,8 @@
         </html>
 
   
+
+  
+
 
     
